feat: 서버/DB연동 완료

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "ios": "expo start --ios",
         "web": "expo start --web",
         "eject": "expo eject",
+        "codegen": "graphql-codegen --config codegen.yml",
         "deploy": "gh-pages -d web-build",
         "predeploy": "expo build:web"
     },
