--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "expo-status-bar": "~1.0.3",
         "graphql": "^15.5.0",
         "graphql-tag": "^2.11.0",
-        "react": "16.13.1",
+        "jquery": "^3.5.1",
+        "react": "^17.0.1",
         "react-dom": "16.13.1",
         "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
         "react-native-elements": "^3.1.0",
@@ -42,6 +43,7 @@
         "@graphql-codegen/typescript": "^1.20.2",
         "@graphql-codegen/typescript-operations": "^1.17.14",
         "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+        "@types/jquery": "^3.5.5",
         "@types/react": "~16.9.35",
         "@types/react-dom": "~16.9.8",
         "@types/react-native": "~0.63.2",
