feat: 네비게이션 정리 / GQL 쿼리 관런 작업

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "web": "expo start --web",
         "eject": "expo eject",
         "codegen": "graphql-codegen --config codegen.yml",
-        "deploy": "gh-pages -d web-build",
-        "predeploy": "expo build:web"
+        "deploy": "gh-pages -d web-build"
     },
     "dependencies": {
         "@apollo/client": "^3.3.7",
