--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "react-native-safe-area-context": "3.1.9",
         "react-native-screens": "~2.15.2",
         "react-native-vector-icons": "^8.0.0",
-        "react-native-web": "~0.13.12"
+        "react-native-web": "~0.13.12",
+        "styled-components": "^5.2.1"
     },
     "devDependencies": {
         "@babel/core": "~7.9.0",
@@ -46,6 +47,7 @@
         "@types/react": "~16.9.35",
         "@types/react-dom": "~16.9.8",
         "@types/react-native": "~0.63.2",
+        "@types/styled-components": "^5.1.7",
         "gh-pages": "^3.1.0",
         "typescript": "~4.0.0"
     },
